# RentWatchAI

./: README.md  data_analysis_viz.ipynb  post_summarization.ipynb  pull_reddit_api_data.ipynb  pyproject.toml  roberta_sentiment_analysis.ipynb  sentiment_functions.py
data/: reddit_posts_nyc_apt.csv
notebooks/: data_analysis_viz.ipynb  post_summarization.ipynb  pull_reddit_api_data.ipynb  roberta_sentiment_analysis.ipynb
src/: sentiment_functions.py
src/RentWatchAI/: app.py  get_data.py  reddit_api.py  run_sentiment.py
src/RentWatchAI/app/: ui_helpers.py
