[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RentWatchAI"
version = "0.1.0"
description = "A tool for scraping Reddit data about rentals and text summarization using Hugging Face transformers"
authors = [
    { name="Gaby Agrocostea", email="gabya06@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "praw",
    "pandas",
    "streamlit"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

